[package]
name = "firerust"
version = "1.0.5"
edition = "2021"
readme = "README.md"
license = "WTFPL"
authors = ["Daniel Dimbarre <contato@danieldimbarre.pl>"]
homepage = "https://github.com/danieldimbarre/Firerust.git"
repository = "https://github.com/danieldimbarre/Firerust.git"
description = "A simple library for Realtime Database of Firebase."

[dependencies]
url = "2.2"
native-tls = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }