[package]
name = "firerust"
version = "2.0.0"
edition = "2021"
readme = "README.md"
license = "WTFPL"
authors = ["Daniel Dimbarre <contato@danieldimbarre.pl>"]
homepage = "https://github.com/danieldimbarre/Firerust.git"
repository = "https://github.com/danieldimbarre/Firerust.git"
description = "A simple library for Realtime Database of Firebase."

[dependencies]
url = "2.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"